--- a/SearchFrontEnd/index.html
+++ b/SearchFrontEnd/index.html
@@ -11,8 +11,8 @@
 		<div>
 			<label for="functionSelect">Function:</label>
 			<select id="functionSelect">
-				<option value="/search">Search</option>
-				<option value="/explain">Explain</option>
+				<option value="https://search.8372012.xyz/search">Search</option>
+				<option value="https://search.8372012.xyz/explain">Explain</option>
 			</select>
 		</div>
 		<div>
