--- a/SearchFrontEnd/index.html
+++ b/SearchFrontEnd/index.html
@@ -56,7 +56,7 @@
 
 				let formattedResults = "";
 
-				if (endpoint === "/explain") {
+				if (endpoint === "https://search.8372012.xyz/explain") {
 					formattedResults = results
 						.map((result) => {
 							// Convert text to HTML with color-coded tokens
